--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
-    "@notionhq/client": "^5.4.0",
+    "@notionhq/client": "^4.0.2",
     "@supabase/supabase-js": "^2.84.0",
+    "dotenv": "^17.2.3",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
